# VBA-Sync

./: .gitignore  LICENSE  README.md  build.bat  setup.cfg
vba_sync/: cli.py
