[metadata]
name = vba-sync
version = 0.1.1
author="Andrey Kolesov",
author-email="never-ya@yandex.ru",
description = Export and import VBA macros from Word (.docm .dotm) and Excel (.xlsm .xlam)
long-description = file: README.md
long-description-content-type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pywin32