[metadata]
name = vba-sync
version = 0.1.7
author="Andrey Kolesov"
author_email="never-ya@yandex.ru"
description = Export and import VBA macros from Word (.docm .dotm) and Excel (.xlsm .xlam)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndyTakker/vba-sync
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    pywin32
	
[options.entry_points]
console_scripts =
    vba-sync = vba_sync.cli:main
